# hdlc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ast.h  code.txt  code_new.txt  gates.hdl  go.mod  main.cpp  main.go  parser.h
.github/workflows/: cmake.yml  codeql-analysis.yml
ast/: nodes.go  parser.go
hdlc/: CMakeLists.txt  ast.h  chip.cpp  chip.h  codegen.h  jit.h  parser.cpp  parser.h  parser_error.cpp  parser_error.h
hdlc/ast/: CMakeLists.txt  ast.cpp  ast.h  casts.cpp  parser.cpp  parser.h  parser_error.cpp  parser_error.h  transforms.h
hdlc/jit/: CMakeLists.txt  codegen.cpp  codegen.h  module.cpp  module.h
interpret/: interpreter.go
ir/: ir.go
irgen/: generator.go
tests/: CMakeLists.txt  gtest_util.h  test_chips.cpp  test_parser.cpp
